--- a/clase7/index.html
+++ b/clase7/index.html
@@ -1,9 +1,9 @@
-<!-- CLASE 5 -->
-<!-- rectangulo con relleno -->
+<!-- CLASE 7 -->
+<!-- dibujar varias líneas y rellenar la figura creada -->
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>rectangulo con relleno</title>  
+  <title>dibujar varias líneas y rellenar la figura creada</title>  
   <meta charset="UTF-8">
 
 <script type="text/javascript">
@@ -18,13 +18,20 @@ function retornarLienzo(x) {
 
 function dibujar() {
   var lienzo=retornarLienzo("lienzo1");
-  if (lienzo) { 
+  if (lienzo) {
     lienzo.fillStyle="rgb(255,0,0)";
-    lienzo.fillRect(10,10,200,100);
+    lienzo.strokeStyle="rgb(0,0,255)";
+    lienzo.lineWidth=5;
+    lienzo.beginPath();
+    lienzo.moveTo(150,10);
+    lienzo.lineTo(10,290);
+    lienzo.lineTo(290,290);
+    lienzo.lineTo(150,10);
+    lienzo.fill();
+    lienzo.stroke();    
   }
 }
 </script>
-
 </head>
 <body onLoad="dibujar()">
 <canvas id="lienzo1" width="300" height="300">
